--- a/DarkDemo/DarkDemo.csproj
+++ b/DarkDemo/DarkDemo.csproj
@@ -32,8 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,8 +49,17 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebCam_Capture">
+      <HintPath>..\..\..\DLLforAddReference\WebCam_Capture.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CameraForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CameraForm.Designer.cs">
+      <DependentUpon>CameraForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Checque.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +77,21 @@
     </Compile>
     <Compile Include="Customer.Designer.cs">
       <DependentUpon>Customer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DbLiquior.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbLiquior.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DbLiquior.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbLiquior.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DbLiquior.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbLiquior.edmx</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -82,6 +113,28 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>DbLiquior.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>DbLiquior.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>DbLiquior.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tblCameraImage.cs">
+      <DependentUpon>DbLiquior.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tblCustomerCheck.cs">
+      <DependentUpon>DbLiquior.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tblCustomerInfo.cs">
+      <DependentUpon>DbLiquior.tt</DependentUpon>
+    </Compile>
+    <Compile Include="WebCam_PictureBox.cs" />
+    <EmbeddedResource Include="CameraForm.resx">
+      <DependentUpon>CameraForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Checque.resx">
       <DependentUpon>Checque.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +163,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EntityDeploy Include="DbLiquior.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DbLiquior.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DbLiquior.edmx.diagram">
+      <DependentUpon>DbLiquior.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -152,6 +213,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\photo-camera.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DbLiquior.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DbLiquior.Context.cs</LastGenOutput>
+      <DependentUpon>DbLiquior.edmx</DependentUpon>
+    </Content>
+    <Content Include="DbLiquior.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DbLiquior.edmx</DependentUpon>
+      <LastGenOutput>DbLiquior.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
